@@ -127,6 +127,7 @@ for Applied Network Research and members of the Web Caching community.
 
 <descrip>
 <tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=761" name="#761"></tag>assertion failed: cbdata.c:249: "c-&gt;locks &gt; 0" when using diskd
+<tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=910" name="#910"></tag>ntlm auth_user_hash_pointer memory leak if challenge reuses are enabled
 
 <tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=779" name="#779"></tag>users going above their allowed IP count no longer logged in cache.log
 <tag>Bug <url url="http://www.squid-cache.org/bugs/show_bug.cgi?id=692" name="#692"></tag>tcp_outgoing_address using an ident ACL does not work
@@ -236,6 +237,9 @@ name="ChangeLog"> file for details.
 	of random auth popups and account lockouts. Support for the NEGOTIATE
 	NTLM packet is also added to allow Samba-3.0.2 or later to negotiate the
 	use of NTLMv2.
+	<item>Several authentication related bugfixes to allow authentication
+	to work in additional acl driven directives, correct an number
+	of assertion or segmentation and some memory leaks.
 	<item>a large number of minor and cosmetic bugfixes. See the list of <url
 	url="http://www.squid-cache.org/Versions/v2/2.5/bugs/#STABLE4"
 	name="squid-2.5.STABLE4 patches"> and the <url url="ChangeLog"
